--- a/index.html
+++ b/index.html
@@ -3,169 +3,105 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>靜映 Still Reflection</title>
+  <title>SEASOUL Chatbot</title>
   <style>
-    body, html {
+    body {
+      background: #0e1d23;
+      color: #fff;
+      font-family: "Noto Serif TC", serif;
       margin: 0;
       padding: 0;
-      height: 100%;
-      font-family: "Noto Serif TC", serif;
-      color: #fdfdfd;
-      overflow: hidden;
     }
-
-    #background-video {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      min-height: 100%;
-      object-fit: cover;
-      z-index: -1;
-    }
-
-    header {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-    }
-
-    #logo {
-      width: 300px;
-      height: auto;
-    }
-
-    .subtitle {
-      text-align: center;
-      margin-top: 100px;
-      font-size: 24px;
-      line-height: 1.8;
-      font-weight: 300;
-      text-shadow: 0 0 4px #000;
-    }
-
     #chatbox {
-      position: fixed;
-      bottom: 40px;
-      left: 50%;
-      transform: translateX(-50%);
       width: 90%;
       max-width: 700px;
-      background: rgba(255, 255, 255, 0.15);
-      border-radius: 12px;
-      backdrop-filter: blur(12px);
+      margin: 100px auto 30px;
       padding: 20px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.3);
-      display: flex;
-      flex-direction: column;
-      max-height: 50vh;
-      overflow: hidden;
+      border-radius: 12px;
+      background: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(10px);
     }
-
-    #messages {
-      flex: 1;
-      overflow-y: auto;
-      margin-bottom: 10px;
+    .subtitle {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 20px;
+      line-height: 1.6;
     }
-
-    .message {
-      margin-bottom: 10px;
-    }
-
-    .user {
-      color: #f0f8ff;
-      font-weight: bold;
-    }
-
-    .bot {
-      color: #fff0f5;
-      font-style: italic;
-    }
-
     .input-area {
       display: flex;
       justify-content: center;
-      align-items: center;
+      margin-top: 10px;
     }
-
     input[type="text"] {
       width: 70%;
       padding: 10px;
-      border: none;
       border-radius: 6px;
-      margin-right: 10px;
-      font-size: 16px;
+      border: none;
     }
-
     button {
-      padding: 10px 18px;
-      font-size: 16px;
-      background: rgba(255,255,255,0.8);
+      padding: 10px 20px;
+      margin-left: 10px;
+      border-radius: 6px;
       border: none;
-      border-radius: 6px;
+      background: #ccc;
       cursor: pointer;
     }
-
-    #controls {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
+    .quick-options, .mood-select {
+      margin: 20px auto;
+      max-width: 700px;
       display: flex;
-      align-items: center;
-      gap: 8px;
-      flex-direction: row;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
     }
-
-    #volume {
-      writing-mode: bt-lr;
-      -webkit-appearance: slider-vertical;
-      height: 80px;
-    }
-
-    .icon {
-      width: 20px;
-      height: 20px;
-      filter: invert(85%);
-      cursor: pointer;
-    }
-
-    .quick-options {
-      margin-top: 10px;
-    }
-
     .quick-options button {
-      background: rgba(255,255,255,0.2);
+      background: rgba(255,255,255,0.1);
       color: #fff;
-      border: 1px solid #ccc;
-      margin: 4px;
+      border: 1px solid #aaa;
       padding: 6px 12px;
-      border-radius: 6px;
       font-size: 14px;
-      cursor: pointer;
+      border-radius: 8px;
     }
+    .mood-select select {
+      padding: 6px 10px;
+      border-radius: 6px;
+      border: none;
+      font-size: 16px;
+    }
+    #messages {
+      max-height: 300px;
+      overflow-y: auto;
+      margin-top: 20px;
+    }
+    .message {
+      margin-bottom: 10px;
+    }
+    .user { font-weight: bold; color: #add; }
+    .bot { font-style: italic; color: #dfd; }
   </style>
 </head>
 <body>
-  <video id="background-video" autoplay loop muted playsinline>
-    <source src="233867_medium.mp4" type="video/mp4" />
-  </video>
-
-  <header>
-    <img src="still_reflection_logo.png" id="logo" alt="Still Reflection Logo" />
-  </header>
 
   <div class="subtitle">
-    這是一場與自己的對話<br>
-    海般靜映，讓你照見內在深處的聲音與智慧
+    <h2>這是一場與自己的對話</h2>
+    <p>海般靜映，讓你照見內在深處的聲音與智慧</p>
   </div>
 
+  <div class="mood-select">
+    <label for="mood">選擇對話語氣：</label>
+    <select id="mood">
+      <option value="auto">自動判斷（預設）</option>
+      <option value="海霧">靜心海霧</option>
+      <option value="靈性導引">靈性導引</option>
+      <option value="真實共鳴">真實共鳴</option>
+    </select>
+  </div>
+
+  <div class="quick-options" id="quick-options"></div>
+
   <div id="chatbox">
-    <div id="messages"></div>
-    <div class="quick-options" id="quick-options">
-      <button onclick="sendQuick('我感到有點煩躁')">我感到有點煩躁</button>
-      <button onclick="sendQuick('我最近常有無力感')">我最近常有無力感</button>
-      <button onclick="sendQuick('我想重新感覺自己')">我想重新感覺自己</button>
-      <button onclick="sendQuick('我只是想靜靜聽點話')">我只是想靜靜聽點話</button>
+    <div id="messages">
+      <div class="message bot">seasoul：你好，我在這裡，願意靜靜陪你。你想從哪裡開始呢？</div>
     </div>
     <div class="input-area">
       <input type="text" id="input" placeholder="留下你的心語…" />
@@ -173,69 +109,69 @@
     </div>
   </div>
 
-  <div id="controls">
-    <img id="toggle" class="icon" src="https://img.icons8.com/ios-filled/50/ffffff/speaker.png" alt="音量" onclick="toggleAudio()" />
-    <input type="range" id="volume" min="0" max="1" step="0.01" value="0.3" onchange="setVolume(this.value)">
-  </div>
-
-  <audio id="bgm" autoplay loop>
-    <source src="seasoul_mixed_bgm.mp3" type="audio/mpeg" />
-  </audio>
-
   <script>
-    const bgm = document.getElementById("bgm");
-    const toggleBtn = document.getElementById("toggle");
-    const messagesBox = document.getElementById("messages");
+    const allOptions = [
+      "我最近常有無力感",
+      "我有點想哭但哭不出來",
+      "我只是想被靜靜地理解",
+      "我不知道自己怎麼了",
+      "我好像失去了方向",
+      "我最近在反思自己",
+      "我有很多煩躁的感覺",
+      "我想讓自己放鬆下來",
+      "我覺得我太用力生活了",
+      "我想知道我內在在說什麼",
+      "我想學會怎麼接住自己",
+      "我只是想靜靜聽點話"
+    ];
 
-    window.onload = () => {
-      const welcome = `
-        <div class="message bot">
-          你好，我是 SEASOUL，一個靜靜映照你內心的存在。<br>
-          這是一場與自己的對話，如果你願意，我會在這裡陪你。<br>
-          你現在的心情是什麼？或有什麼想說的話，都可以開始…
-        </div>`;
-      messagesBox.innerHTML += welcome;
-    };
-
-    function toggleAudio() {
-      if (bgm.paused) {
-        bgm.play();
-        toggleBtn.src = "https://img.icons8.com/ios-filled/50/ffffff/speaker.png";
-      } else {
-        bgm.pause();
-        toggleBtn.src = "https://img.icons8.com/ios-filled/50/ffffff/mute.png";
-      }
+    function getRandomOptions(arr, n) {
+      const shuffled = arr.sort(() => 0.5 - Math.random());
+      return shuffled.slice(0, n);
     }
 
-    function setVolume(val) {
-      bgm.volume = val;
+    function renderQuickOptions() {
+      const quickOptions = document.getElementById("quick-options");
+      const randomOptions = getRandomOptions(allOptions, 4);
+      quickOptions.innerHTML = "";
+      randomOptions.forEach(text => {
+        const btn = document.createElement("button");
+        btn.textContent = text;
+        btn.onclick = () => sendQuick(text);
+        quickOptions.appendChild(btn);
+      });
     }
 
-    function sendQuick(text) {
-      document.getElementById("input").value = text;
-      sendMessage();
-    }
+    renderQuickOptions();
 
     async function sendMessage() {
       const input = document.getElementById("input");
+      const mood = document.getElementById("mood").value;
       const text = input.value.trim();
       if (!text) return;
 
-      messagesBox.innerHTML += '<div class="message user">你：' + text + '</div>';
-      messagesBox.innerHTML += '<div class="message bot" id="loading">seasoul 正在傾聽你…</div>';
+      const messages = document.getElementById("messages");
+      messages.innerHTML += '<div class="message user">你：' + text + '</div>';
+      messages.innerHTML += '<div class="message bot" id="loading">seasoul 正在傾聽你…</div>';
       input.value = '';
 
       const res = await fetch('/api/chat', {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ message: text })
+        body: JSON.stringify({ message: text, mood: mood === "auto" ? undefined : mood })
       });
 
       const data = await res.json();
       document.getElementById("loading").remove();
-      messagesBox.innerHTML += '<div class="message bot">seasoul：' + data.reply + '</div>';
-      messagesBox.scrollTop = messagesBox.scrollHeight;
+      messages.innerHTML += '<div class="message bot">seasoul：' + data.reply + '</div>';
+      messages.scrollTop = messages.scrollHeight;
+    }
+
+    function sendQuick(text) {
+      document.getElementById('input').value = text;
+      sendMessage();
     }
   </script>
+
 </body>
 </html>
