--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Noto Serif TC', serif; }
-    body, html { height: 100%; overflow: hidden; }
+    body, html { height: 100%; overflow: hidden; background: #000; }
     video.bg-video {
       position: fixed;
       top: 0; left: 0;
@@ -87,7 +87,6 @@
       border-radius: 5px;
       cursor: pointer;
     }
-
     #audio-control {
       position: absolute;
       bottom: 20px;
@@ -98,20 +97,17 @@
       gap: 10px;
       z-index: 10;
     }
-
     #volume-bar {
       writing-mode: bt-lr;
       -webkit-appearance: slider-vertical;
       width: 8px;
       height: 100px;
     }
-
     #audio-icon {
       font-size: 20px;
       color: #fff;
       cursor: pointer;
     }
-
     #export-btn {
       position: absolute;
       bottom: 20px;
@@ -126,7 +122,6 @@
   </style>
 </head>
 <body>
-
 <video autoplay muted loop class="bg-video">
   <source src="233867_medium.mp4" type="video/mp4">
 </video>
@@ -153,7 +148,7 @@
   <input type="range" id="volume-bar" min="0" max="1" step="0.01" value="1" onchange="adjustVolume(this.value)" />
 </div>
 
-<button id="export-btn" onclick="exportChat()">匯出對話</button>
+<button id="export-btn" onclick="openExportModal()">萃取我的靈魂對話</button>
 
 <audio id="bgm" autoplay loop>
   <source src="seasoul_mixed_bgm.mp3" type="audio/mpeg">
@@ -163,7 +158,13 @@
     "我最近常有無力感",
     "我想逃離現在的生活",
     "我失去了目標感",
-    "我只是想靜靜聽點話"
+    "我只是想靜靜聽點話",
+    "為什麼我總覺得不夠好",
+    "我想放下控制一切的念頭",
+    "我害怕面對自己的情緒",
+    "我渴望被理解卻不敢表達",
+    "我想找回內在的穩定感",
+    "我正在經歷很大的轉變"
   ];
 
   function renderQuickOptions() {
@@ -225,16 +226,6 @@
     saveMessage("seasoul", data.reply);
   }
 
-  function exportChat() {
-    const history = JSON.parse(localStorage.getItem("seasoul_log") || "[]");
-    const text = history.map(h => `[${h.role}] ${h.content}`).join("\\n\\n");
-    const blob = new Blob([text], { type: 'text/plain' });
-    const link = document.createElement("a");
-    link.href = URL.createObjectURL(blob);
-    link.download = "seasoul_conversation.txt";
-    link.click();
-  }
-
   function toggleAudio() {
     const bgm = document.getElementById("bgm");
     const icon = document.getElementById("audio-icon");
@@ -256,6 +247,159 @@
     renderMessages();
   };
 </script>
+<!-- 🔮 Modal 彈出視窗 -->
+<div id="export-modal" style="display:none; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.5); z-index:999; align-items:center; justify-content:center;">
+  <div style="background:#fff; padding:30px; max-width:700px; width:90%; border-radius:10px; box-shadow:0 0 15px #333; overflow-y:auto; max-height:80vh;">
+    <h2 style="font-family:'Noto Serif TC'; margin-bottom: 10px;">🌿 萃取你的靈魂對話</h2>
+    <div id="select-lines" style="margin: 20px 0;"></div>
+    <p><strong>選擇匯出格式：</strong></p>
+    <label><input type="checkbox" id="fmt-png" checked> PNG（圖文卡，可分享到 Threads / IG）</label><br>
+    <label><input type="checkbox" id="fmt-md" checked> Markdown（格式清晰，適合雲端筆記）</label><br>
+    <label><input type="checkbox" id="fmt-pdf"> PDF（可印出收藏，作為靈魂日記）</label><br>
+    <label><input type="checkbox" id="fmt-json"> JSON（進階儲存格式，可再匯入使用）</label>
+    <div style="margin-top:25px; text-align:right;">
+      <button onclick="generateExport()" style="padding: 10px 20px;">🔮 生成</button>
+      <button onclick="closeExportModal()" style="margin-left: 10px;">取消</button>
+    </div>
+  </div>
+</div>
 
+<script>
+function openExportModal() {
+  const modal = document.getElementById("export-modal");
+  const container = document.getElementById("select-lines");
+  container.innerHTML = "";
+
+  const history = JSON.parse(localStorage.getItem("seasoul_log") || "[]");
+  history.forEach((entry, idx) => {
+    const role = entry.role === "user" ? "你" : "seasoul";
+    const content = `${role}：${entry.content}`;
+    const line = document.createElement("div");
+    line.innerHTML = `
+      <label>
+        <input type="checkbox" class="line-checkbox" value="${entry.content.replace(/"/g, '&quot;')}" data-role="${role}" checked>
+        ${content}
+      </label>
+    `;
+    container.appendChild(line);
+  });
+
+  modal.style.display = "flex";
+}
+
+function closeExportModal() {
+  document.getElementById("export-modal").style.display = "none";
+}
+
+function generateExport() {
+  const checkboxes = document.querySelectorAll(".line-checkbox:checked");
+  const lines = [];
+  checkboxes.forEach(c => {
+    lines.push({ role: c.dataset.role, content: c.value });
+  });
+
+  const exportFormats = {
+    png: document.getElementById("fmt-png").checked,
+    md: document.getElementById("fmt-md").checked,
+    pdf: document.getElementById("fmt-pdf").checked,
+    json: document.getElementById("fmt-json").checked,
+  };
+
+  if (lines.length === 0) {
+    alert("請至少選擇一句對話內容 🙏");
+    return;
+  }
+
+  const timestamp = new Date().toISOString().slice(0,19).replace(/[:T]/g,'-');
+  const baseName = `seasoul_dialogue_${timestamp}`;
+
+  if (exportFormats.json) downloadJSON(lines, baseName + ".json");
+  if (exportFormats.md) downloadMarkdown(lines, baseName + ".md");
+  if (exportFormats.pdf) generatePDF(lines, baseName + ".pdf");
+  if (exportFormats.png) generateImage(lines, baseName + ".png");
+
+  closeExportModal();
+}
+
+function downloadJSON(lines, filename) {
+  const blob = new Blob([JSON.stringify(lines, null, 2)], { type: "application/json" });
+  const link = document.createElement("a");
+  link.href = URL.createObjectURL(blob);
+  link.download = filename;
+  link.click();
+}
+
+function downloadMarkdown(lines, filename) {
+  let md = "# 靜映・靈魂對話選摘\n\n";
+  lines.forEach(l => {
+    md += `**${l.role}**：${l.content}\n\n`;
+  });
+  const blob = new Blob([md], { type: "text/markdown" });
+  const link = document.createElement("a");
+  link.href = URL.createObjectURL(blob);
+  link.download = filename;
+  link.click();
+}
+
+function generatePDF(lines, filename) {
+  const doc = new window.jspdf.jsPDF();
+  doc.setFont("helvetica", "normal");
+  doc.setFontSize(14);
+  doc.text("靜映 Still Reflection・靈魂對話選摘", 20, 20);
+  let y = 30;
+  lines.forEach(l => {
+    const text = `${l.role}：${l.content}`;
+    const split = doc.splitTextToSize(text, 170);
+    doc.text(split, 20, y);
+    y += split.length * 10;
+  });
+  doc.save(filename);
+}
+
+function generateImage(lines, filename) {
+  const container = document.createElement("div");
+  container.style.width = "800px";
+  container.style.padding = "40px";
+  container.style.background = "#f5f5f5";
+  container.style.color = "#333";
+  container.style.fontFamily = "'Noto Serif TC', serif";
+  container.style.fontSize = "20px";
+  container.style.lineHeight = "1.8";
+  container.style.border = "1px solid #ccc";
+  container.style.borderRadius = "10px";
+
+  const title = document.createElement("h2");
+  title.innerText = "靜映・靈魂對話選摘";
+  title.style.textAlign = "center";
+  title.style.marginBottom = "30px";
+  container.appendChild(title);
+
+  lines.forEach(l => {
+    const p = document.createElement("p");
+    p.innerHTML = `<strong>${l.role}</strong>：${l.content}`;
+    container.appendChild(p);
+  });
+
+  const footer = document.createElement("p");
+  footer.innerText = "@seasoultw";
+  footer.style.textAlign = "right";
+  footer.style.marginTop = "40px";
+  footer.style.color = "#888";
+  container.appendChild(footer);
+
+  document.body.appendChild(container);
+  html2canvas(container).then(canvas => {
+    const link = document.createElement("a");
+    link.href = canvas.toDataURL("image/png");
+    link.download = filename;
+    link.click();
+    document.body.removeChild(container);
+  });
+}
+</script>
+
+<!-- 套件引入 -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </body>
 </html>
